package SdkFacade

import "prove1/Adapter/in/SdkFacade/TaskSdk"

type Facade struct {
	TaskSdk TaskSdk.Sdk
}
